--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -8,17 +8,11 @@
 </head>
 <body>
     <ul>
-        <li><a href="/ejercicios/scope.html">Go scope</a></li>
-        <li><a href="/ejercicios/clousers.html">Go go clouser</a></li>
+        <li><a href="./scope.html">Go scope</a></li>
+        <li><a href="./clousers.html">Go go clouser</a></li>
+        <li><a href="./this.html">Go go this</a></li>
     </ul>
     
     <p><em>Abre la consola</em></p>
-
-    <script>
-        // Global Scope
-        // Funcion Scope
-        // Block Scope
-        // Module Scope
-    </script>
 </body>
 </html>
