--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <source src="./assets/enemy.mp4">
         </video>
         <button id="playButtom">play/pausa</button>
+        <button id="muteButtom">mute/unmute</button>
     </main>
 
     <script type="module" src="./assets/index.js"></script>
