--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <ul>
-        <li><a href="./scope.html">Go scope</a></li>
-        <li><a href="./clousers.html">Go go clouser</a></li>
-        <li><a href="./this.html">Go go this</a></li>
+<body style="background-color: black; color: white">
+    <p>selecciona una opcion</p>
+    <ul >
+        <li><a style="color: aqua;" href="./scope.html">Go scope</a></li>
+        <li><a style="color: aqua;" href="./clousers.html">Go clouser</a></li>
+        <li><a style="color: aqua;" href="./this.html">Go this</a></li>
+        <li><a style="color: aqua;" href="./call_apply_bind.html">Go call-apply-bind</a></li>
+        <li><a style="color: aqua;" href="./prototype.html">Go prototype</a></li>
     </ul>
-    
-    <p><em>Abre la consola</em></p>
 </body>
 </html>
