--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -14,6 +14,7 @@
         <li><a style="color: aqua;" href="./this.html">Go this</a></li>
         <li><a style="color: aqua;" href="./call_apply_bind.html">Go call-apply-bind</a></li>
         <li><a style="color: aqua;" href="./prototype.html">Go prototype</a></li>
+        <li><a style="color: aqua;" href="./prototypal-inher.html">Go prototype-inher</a></li>
     </ul>
 </body>
 </html>
