--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -15,6 +15,10 @@
         <li><a style="color: aqua;" href="./call_apply_bind.html">Go call-apply-bind</a></li>
         <li><a style="color: aqua;" href="./prototype.html">Go prototype</a></li>
         <li><a style="color: aqua;" href="./prototypal-inher.html">Go prototype-inher</a></li>
+        <li><a style="color: aqua;" href="./promises.html">Go promises</a></li>
+        <li><a style="color: aqua;" href="./proxy.html">Go proxy</a></li>
+        <li><a style="color: aqua;" href="./generators.html">Go generators</a></li>
+        <li><a style="color: aqua;" href="./abort-fetch.html">Go abort-fetch</a></li>
     </ul>
 </body>
 </html>
