--- a/ejercicios/prototypal-inher.html
+++ b/ejercicios/prototypal-inher.html
@@ -10,6 +10,18 @@
     <a style="color: aqua;" href="/ejercicios/">Go back</a>
     <p><em>Abre la consola</em></p>
 
+    <h1>
+        <code>SomeObject.prototype</code> es un objeto donde definimos el
+        prototipo de las instancias de <code>SomeObject</code>. Es decir, las
+        instancias de <code>SomeObject</code> van a "heredar" de
+        <code>SomeObject.prototype</code>.
+        <br />
+        <br />
+        <code>SomeObject.[[Prototype]]</code> es el prototipo de
+        <code>SomeObject</code>. Es decir, <code>SomeObject</code> "hereda" de
+        <code>SomeObject.prototype</code>.
+    </h1>
+
     <script>
         function Hero(name){
             this.name = name;
