add files typescript

--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -19,6 +19,9 @@
         <li><a style="color: aqua;" href="./proxy.html">Go proxy</a></li>
         <li><a style="color: aqua;" href="./generators.html">Go generators</a></li>
         <li><a style="color: aqua;" href="./abort-fetch.html">Go abort-fetch</a></li>
+        <li><a style="color: aqua;" href="./singleton/index.html">Go Singleton</a></li>
+        <li><a style="color: aqua;" href="./Observer/index.html">Go Observer</a></li>
+        <li><a style="color: aqua;" href="./decorator/index.html">Go Decorators</a></li>
     </ul>
 </body>
 </html>
